# plaza-timelapse

./: .ninja_deps  .ninja_log  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  RayMarching.cpp  build.ninja  cmake_install.cmake  qtcsettings.cmake
.cmake/api/v1/reply/: cache-v2-f1dd7d7a218aa9b4fe0b.json  cmakeFiles-v1-440186b37887076c5205.json  codemodel-v2-3ad0eecca81e5e82c049.json  index-2025-06-08T20-52-46-0153.json  target-RayMarching-Debug-7333c9a79a9313e930c4.json
Shaders/: BufferA.fs  Image.fs.frag  VertexShader.vs
